- fixed mobile alignment - updated key

--- a/src/components/weather.css
+++ b/src/components/weather.css
@@ -81,10 +81,11 @@ header span{
 }
 
 .weeklyWeather{
+    position: absolute;
     text-align: center;
     width: 80%;
-    margin: auto;
-    margin-top: 350px;   
+    left: 10%;
+    bottom: 150px;   
 }
 
 ul{
@@ -117,113 +118,64 @@ li span{
 }
 
 @media (max-width: 860px) {
- .dailyWeather{
-    width: 100%;
-    top: 150px;
-}
+    .dailyWeather{
+        width: 100%;
+        top: 150px;
+    }
 
-.dailyWeather .icon {}
-.weeklyWeather{
-    margin-top:300px;
-    width: 100%;
-}
+    .weeklyWeather{
+        bottom:100px;
+        width: 100%;
+        left: 0;
+    }
 
-ul{
- flex-direction: column; 
- width: 100% !important;
- padding-left: 0px !important; 
- padding-right: 0px !important; 
+    ul{
+        flex-direction: column; 
+        width: 100% !important;
+        padding-left: 0px !important; 
+        padding-right: 0px !important; 
+    }
+    ul span{
+        display: inline-block;
+    }
+    ul .forecastHeadline{
+        padding-left: 10px;
+        display: block;
+        clear: both;
+    }
+    ul .temperature {
+        display: block;
+    }
+    li{
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    .weatherItems{
+        width: 100%;
+        border-radius: 0;
+        height:100%;
+        justify-content:space-around;
+        flex-grow: 1;
+        margin-bottom: 5px;
+        background-color: none;
+    }
+    .weatherItems +.weatherItems{
+        margin-left: 0px !important;
 
-}
-ul span{
-    display: inline-block;
-}
-ul .forecastHeadline{
-    float: left ;
-    padding-left: 10px;
-}
-li{
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-.weatherItems{
-    width: 100%;
-    border-radius: 0;
-    height:100%;
-    justify-content:space-around;
-    flex-grow: 1;
-    margin-bottom: 5px;
-    background-color: none;
-}
-.weatherItems +.weatherItems{
-    margin-left: 0px !important;
+    }
+    .iconAndTemp{
+        float: right;
+        margin-right: 40px;
+        margin-top: -40px;
+    }
+    .weeklyIcon{
+        padding-left: 5px;
+    }
+    #cityName{
+        text-align: left !important;
+    }
+}   /* media query */
 
-}
-.iconAndTemp{
-    float: right;
-    margin-right: 40px;
-   
-}
-.weeklyIcon{
-    padding-left: 5px;
-}
-#cityName{
-    text-align: left !important;
-}
-}
-
-.autocomplete-wrapper {
-    width: 350px;
-    position: relative;
-    display: inline-block;
-  }
-  
-  .autocomplete-wrapper > div {
-    width: 100%;
-  }
-  
-  .autocomplete-wrapper input {
-    border: 1px solid #cecece;
-    padding: 12px 15px;
-    font-size: 14px;
-    width: 100%;
-  }
-  
-  .autocomplete-wrapper input:focus {
-    border-color: #0F67FF;
-    box-shadow: none;
-    outline: none;
-  }
-  
-  .autocomplete-wrapper .dropdown {
-    width: 100%;
-    padding: 0;
-    text-align: left;
-    max-height: 280px;
-    overflow: hidden;
-    overflow-y: auto;
-    background-color: #ffffff;
-    border: 1px solid #0F67FF;
-    border-top: none;
-  }
-  
-  .autocomplete-wrapper .item  {
-    display: block;
-    cursor: pointer;
-    font-size: 14px;
-    padding: 15px;
-  }
-  
-  .autocomplete-wrapper .item.selected-item {
-    background-color: #0069ff;
-    color: #FAFBFC;
-  }
-  
-  .autocomplete-wrapper .item:hover {
-    background-color: #0069ff;
-    color: #FAFBFC;
-  }
-  
   #errorWrapper {
     position: absolute;
     width: 100%;
@@ -244,3 +196,5 @@ li{
   #errorToast.show {
     display: block !important;
   }
+
+
